# perfect_repo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/rulesets/: branch_naming.json  branches.json  default_branch.json
.github/workflows/: pull_request.yml  python-quality.yml  python-security.yml  python-tests.yml  release.yml
app/: main.py
tests/: test_main.py
