[project]
name = "perfect_repo"
description = "A repository following common DevOps practices"
authors = [
    {name = "Filipe Galo",email = "fcostagal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
package-mode = false
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)"
]



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
bandit = "^1.8.3"
isort = "^6.0.1"
ruff = "^0.11.12"
commitizen = "^4.8.2"
pytest-cov = "^6.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.0.1"
packages = [
    { include = "app" }
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Skip assert statements in tests

[tool.isort]
profile = "black"
src_paths = ["app"]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
